add link to deployment dashboard

--- a/index.html
+++ b/index.html
@@ -752,6 +752,8 @@
 
       <div id="output-div"></div>
 
+      <p>To see which TLDs support RDAP, <a href="https://deployment.rdap.org" target="_new">click here</a>.</p>
+
       <p><strong>Note:</strong></p>
 
       <ul>
