make dates and times hoverable

--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
       dl {
         margin:0;
       }
+      .rdap-status-code,.rdap-event-time {
+        border-bottom: 1px dashed silver;
+      }
     </style>
     <script>
       // see https://www.iana.org/assignments/rdap-json-values
