send ?jscard=1 on queries

--- a/index.html
+++ b/index.html
@@ -116,21 +116,23 @@
         var typeval = type.options[type.selectedIndex].value;
         var object = document.getElementById('object').value;
 
+        var queryParams = (document.getElementById('request-jscontact').checked ? '?jscard=1' : '');
+
         var url;
         if ('url' == typeval) {
           url = object;
 
         } else if ('tld' == typeval) {
-          url = 'https://root.rdap.org/domain/' + object;
+          url = 'https://root.rdap.org/domain/' + object + queryParams;
 
         } else if ('registrar' == typeval) {
-          url = 'https://registrars.rdap.org/entity/' + object + '-IANA';
+          url = 'https://registrars.rdap.org/entity/' + object + '-IANA' + queryParams;
 
         } else if ('json' == typeval) {
           url = 'json://' + object;
 
         } else {
-          url = getRDAPURL(typeval, object);
+          url = getRDAPURL(typeval, object) + queryParams;
 
         }
 
@@ -876,23 +878,29 @@
             <div class="input-group-append">
               <input id="button" type="button" value="Submit" onclick="doQuery()" class="btn btn-primary"/>
             </div>
-
           </div>
         </div>
       </form>
 
-      <br/>
+      <div class="container" style="padding:0;font-size:small;font-style:italic;color:#aaa">
+        <div class="col" style="padding:0">
+          <label for="request-jscontact">
+            <input name="request-jscontact" id="request-jscontact" type="checkbox" checked>
+            Request JSContact (if available)
+          </label>
+        </div>
+      </div>
 
       <div id="output-div"></div>
 
-      <p>To see which TLDs support RDAP, <a href="https://deployment.rdap.org" target="_new">click here</a>.</p>
-
-      <p><strong>Note:</strong></p>
+      <p><strong>Notes:</strong></p>
 
       <ul>
-        <li>This page uses the <a href="https://about.rdap.org/">RDAP.org</a> service, so your queries are sent to that server, but the RDAP responses themselves come directly from the registries.</li>
-        <li>Top-level domain and ICANN-accredited registrar queries do not use the IANA bootstrap registries; instead these queries are sent to the RDAP.org RDAP servers.</li>
-        <li>To submit feedback, <a href="mailto:rdap.org-feedback@cryptocracy.org">click here</a>. Please contact the registries if you have any issues with the contents of RDAP responses.</li>
+        <li>To see which TLDs support RDAP, <a href="https://deployment.rdap.org" target="_new">click here</a>.</li>
+        <li>This page uses the <a href="https://about.rdap.org/">RDAP.org</a> service, so your queries are sent to that server, but the RDAP responses themselves come directly from the registry (or registrar) servers.</li>
+        <li>Queries for top-level domains and ICANN-accredited registrars do not use the IANA bootstrap registries; instead these queries are sent to the {root,registrars}.rdap.org servers.</li>
+        <li>It <em>should</em> be OK to leave "Request JSContact" checked, but if you get odd 400 errors from RDAP servers, consider turning it off.</li>
+        <li>To submit feedback, <a href="mailto:feedback@rdap.org">click here</a>. Please contact the registries if you have any issues with the contents of RDAP responses.</li>
         <li>The RDAP Web Client is Free Software; for the license, <a href="LICENSE">click here</a>. To fork a copy of the git repository, <a href="https://gitlab.centralnic.com/centralnic/rdap-web-client">click here</a>.</li>
       </ul>
 
